--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 # Database Configuration
-DATABASE_URL=\
+DATABASE_URL="DATABASE_URL="postgresql+asyncpg://SakshiJagtap:Sakshirj@21@b5tkxujklbnu2drvmgtt2hyrwe.dsql.us-east-1.on.aws:5432/postgres"
+
 # Groq AI Configuration
 GROQ_API_KEY=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
 
