--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 # Database Configuration
-DATABASE_URL="DATABASE_URL="postgresql://SakshiJagtap:Sakshirj%4021@b5tkxujklbnu2drvmgtt2hyrwe.dsql.us-east-1.on.aws:5432/postgres"
+DATABASE_URL="postgresql://neondb_owner:npg_rghcyiaub7Q1@ep-sparkling-pond-adzuvpbp-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+"
 
 # Groq AI Configuration
 GROQ_API_KEY=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
