--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -74,15 +74,34 @@ jobs:
         cd frontend
         npm run build
 
-    - name: Deploy to Replit
-      run: |
-        echo "Deploying to Replit..."
-        # Add your specific deployment commands here if needed
-        
-        # Example deployment command to start frontend
-        # Uncomment and replace the environmentally safe command if applicable
-        # cd frontend && npm run start
 
-        # Example command to deploy backend
-        # Uncomment and replace the environmentally safe command if applicable
-        # cd backend && uvicorn app.main:app --host 0.0.0.0 --port 8000 &
+  deploy-amplify:
+    name: Deploy Frontend to AWS Amplify
+    runs-on: ubuntu-latest
+    needs: build
+    env:
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AMPLIFY_APP_ID: ${{ secrets.AMPLIFY_APP_ID }}
+      AMPLIFY_BRANCH_NAME: ${{ secrets.AMPLIFY_BRANCH_NAME }}
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Install AWS CLI v2
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install --update
+          aws --version
+
+      - name: Trigger Amplify Console build (start job)
+        run: |
+          echo "Starting Amplify job for app: $AMPLIFY_APP_ID branch: $AMPLIFY_BRANCH_NAME"
+          aws amplify start-job \
+            --app-id "$AMPLIFY_APP_ID" \
+            --branch-name "$AMPLIFY_BRANCH_NAME" \
+            --job-type RELEASE
