--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,12 +6,12 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     services:
       postgres:
-        image: postgres:latest
+        image: postgres:14
         env:
           POSTGRES_DB: sitesage
           POSTGRES_USER: user
@@ -25,83 +25,81 @@ jobs:
           --health-retries 5
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'
-
-    - name: Install Frontend Dependencies
-      run: |
-        cd frontend
-        npm install
-
-    - name: Lint Frontend Code
-      run: |
-        cd frontend
-        npm run lint
-
-    - name: Run Frontend Tests
-      run: |
-        cd frontend
-        npm test
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.11'
-
-    - name: Install Backend Dependencies
-      run: |
-        cd backend
-        pip install -r requirements.txt
-
-    - name: Lint Backend Code
-      run: |
-        pip install pylint
-        cd backend
-        pylint app || true
-
-    - name: Run Backend Tests
-      run: |
-        cd backend
-        pytest
-
-    - name: Build Frontend
-      run: |
-        cd frontend
-        npm run build
-
-
-  deploy-amplify:
-    name: Deploy Frontend to AWS Amplify
-    runs-on: ubuntu-latest
-    needs: build
-    env:
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-      AMPLIFY_APP_ID: ${{ secrets.AMPLIFY_APP_ID }}
-      AMPLIFY_BRANCH_NAME: ${{ secrets.AMPLIFY_BRANCH_NAME }}
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      # Frontend
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          node-version: '20'
 
-      - name: Install AWS CLI v2
+      - name: Install Frontend Dependencies
         run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install --update
-          aws --version
+          cd frontend
+          npm install
 
-      - name: Trigger Amplify Console build (start job)
+      - name: Lint Frontend
         run: |
-          echo "Starting Amplify job for app: $AMPLIFY_APP_ID branch: $AMPLIFY_BRANCH_NAME"
-          aws amplify start-job \
-            --app-id "$AMPLIFY_APP_ID" \
-            --branch-name "$AMPLIFY_BRANCH_NAME" \
-            --job-type RELEASE
+          cd frontend
+          npm run lint
+
+      - name: Test Frontend
+        run: |
+          cd frontend
+          npm test
+
+      - name: Build Frontend
+        run: |
+          cd frontend
+          npm run build
+
+      # Backend
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install Backend Dependencies
+        run: |
+          cd backend
+          pip install -r requirements.txt
+
+      - name: Lint Backend
+        run: |
+          pip install pylint
+          cd backend
+          pylint app || true
+
+      - name: Run Backend Tests
+        run: |
+          cd backend
+          pytest
+
+  deploy:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
+      - name: Copy Files to EC2
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          source: "./docker-compose.yml,./backend,./frontend"
+          target: "~/sitesage/"
+
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            cd ~/sitesage
+            export GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
+            docker-compose pull
+            docker-compose up -d --build
