--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -89,7 +89,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          source: "./docker-compose.yml,./backend,./frontend"
+          source: "./docker-compose.yml,./Dockerfile,./backend,./frontend"
           target: "~/sitesage/"
 
       - name: Deploy via SSH
